@@ -64,7 +64,7 @@ public class HdfsLockFactory extends LockFactory {
     @Override
     public boolean obtain() throws IOException {
       FSDataOutputStream file = null;
-      FileSystem fs = FileSystem.newInstance(lockPath.toUri(), conf);
+      FileSystem fs = FileSystem.get(lockPath.toUri(), conf);
       try {
         while (true) {
           try {
@@ -111,7 +111,7 @@ public class HdfsLockFactory extends LockFactory {
     
     @Override
     public void close() throws IOException {
-      FileSystem fs = FileSystem.newInstance(lockPath.toUri(), conf);
+      FileSystem fs = FileSystem.get(lockPath.toUri(), conf);
       try {
         if (fs.exists(new Path(lockPath, lockName))
             && !fs.delete(new Path(lockPath, lockName), false)) throw new LockReleaseFailedException(
@@ -124,7 +124,7 @@ public class HdfsLockFactory extends LockFactory {
     @Override
     public boolean isLocked() throws IOException {
       boolean isLocked = false;
-      FileSystem fs = FileSystem.newInstance(lockPath.toUri(), conf);
+      FileSystem fs = FileSystem.get(lockPath.toUri(), conf);
       try {
         isLocked = fs.exists(new Path(lockPath, lockName));
       } finally {
